# obsidian-cli-memory-bank-skill

./: .gitignore  INSTALL.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
agents/: openai.yaml
claude-code/: INSTALL.md  SKILL.md
claude-code/hooks/: obsidian_memory_sync_hook.py  obsidian_poststop_hook.py  obsidian_precompact_hook.py  obsidian_preprompt_hook.py  obsidian_sessionstart_hook.py
obsidian_cli_memory_bank.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
references/: obsidian-cli-patterns.md
scripts/: antigravity_notify_hook.py  claude_notify_hook.py  codex_notify_hook.py  cursor_notify_hook.py  hook_common.py  install_codex_notify_hook.sh  obsidian_memory.py
scripts/tests/: test_codex_notify_hook.py  test_cursor_notify_hook.py  test_hook_common.py  test_obsidian_memory.py
