[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-cli-memory-bank"
version = "0.1.0"
description = "Local-first Obsidian memory bank CLI for AI coding agents, with run logging, linked project notes, compaction, and search."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "George Antonopoulos" }
]
keywords = [
  "ai-agents",
  "agent-memory",
  "claude-code",
  "codex",
  "cursor",
  "developer-tools",
  "knowledge-base",
  "markdown",
  "memory-bank",
  "obsidian",
  "obsidian-vault",
  "project-memory"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Documentation",
  "Topic :: Software Development",
  "Topic :: Text Processing :: Markup :: Markdown"
]

[project.urls]
Homepage = "https://github.com/georgeantonopoulos/obsidian-cli-memory-bank-skill"
Repository = "https://github.com/georgeantonopoulos/obsidian-cli-memory-bank-skill"
Issues = "https://github.com/georgeantonopoulos/obsidian-cli-memory-bank-skill/issues"

[project.scripts]
obmem = "scripts.obsidian_memory:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["scripts*"]
